--- a/Assignment_1/app.css
+++ b/Assignment_1/app.css
@@ -9,6 +9,14 @@ body {
   justify-content: center;
   background: white;
   font-family: sans-serif;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0;
 }
 
 .save {
@@ -16,10 +24,29 @@ body {
   border-radius: 8px;
   border-color: transparent;
   display: block;
+  background-color: blueviolet;
+  color: white;
+  align-self: center;
 }
 .save:hover {
   cursor: pointer;
   background-color: #73e831;
+  color: black;
+  transition: ease-in-out 0.1s;
+}
+
+.reset {
+  padding: 8px 15px;
+  margin-left: 10px;
+  background-color: transparent;
+  border-radius: 8px;
+  border: 1px solid grey;
+}
+.reset:hover {
+  cursor: pointer;
+  color: red;
+  border-color: red;
+  transition: ease-in-out 0.1s;
 }
 
 .words {
@@ -33,10 +60,69 @@ body {
   font-size: medium;
 }
 
-.diary-entry-view::marker {
-  color: transparent;
+.view {
+  width: 100%;
+}
+
+.buttons {
+  margin: 10px 0 0 5px;
+  display: flex;
+  justify-content: left;
+  align-content: center;
 }
 
 .last {
-  justify-content: center;
+  padding: 10px 100px;
+  margin-left: 50px;
+  font-size: small;
+  display: flex;
+}
+
+.saved {
+  padding: 0 0 10px 0;
+  margin-top: 50px;
+  margin-left: 5px;
+  font-weight: 600;
+  box-sizing: border-box;
+  border-bottom: 1px solid blueviolet;
+}
+
+.open-diary {
+  margin-top: 15px;
+  margin-left: 5px;
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.diary-entry-view {
+  max-width: fit-content;
+  overflow: hidden;
+  margin-top: 10px;
+  text-align: justify;
+  box-sizing: border-box;
+  padding: 20px;
+  border-bottom: 1px solid grey;
+  display: flex;
+  flex-direction: column;
+}
+
+.delete-button {
+  align-content: right;
+  justify-content: flex-end;
+  padding: 10px 20px;
+  margin: 1em 17em 1em 17em;
+  background-color: transparent;
+  border-radius: 8px;
+  border: 1px solid purple;
+  color: purple;
+  box-sizing: border-box;
+}
+
+.delete-button:hover {
+  cursor: pointer;
+  color: red;
+  border-color: red;
+  transition: ease-in-out 0.1s;
 }
